--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "dotenv": "^8.1.0",
-    "node-persist": "^3.0.5"
+    "faunadb": "^2.8.1"
   },
   "devDependencies": {
     "eslint": "^6.4.0",
