--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "devDependencies": {
     "eslint": "^6.4.0",
     "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.18.2",
-    "netlify-lambda": "^1.6.3"
+    "eslint-plugin-import": "^2.18.2"
   }
 }
